@@ -1,6 +1,14 @@
 Build
 ------------------------------------------------------------------------------------------------------------------------
 
+Bugfixes
+ - Keystroke incorrectly saved in bundle editor on windows
+
+
+
+Build 2010111701
+------------------------------------------------------------------------------------------------------------------------
+
 Features
 
 Improvements
